<resources>
    <string name="app_name">ViredApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Welcome">Welcome</string>
    <string name="pref_file">com.example.preferences_file</string>
    <string name="pref_login_status">com.example.preference_login_status</string>
    <string name="pref_user_name">com.example.preference_user_name</string>

    <!-- Button Labels -->
    <string name="login_button_label">Login</string>
    <string name="signup_button_label">Sign Up</string>

    <!-- EditText Hints -->
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="location_hint">Location</string>
    <string name="username_hint">Username</string>
    <string name="login_title">Login</string>

    <!-- Misc Texts -->
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_txt">Login</string>
    <string name="signup_txt">Signup</string>
    <string name="signup">SignUp</string>
    <string name="email_address_hint">Email Address</string>
    <string name="forgot_password_txt">Forgot Password</string>
    <string name="location_txt">Location</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="title_home">Home</string>
    <string name="title_friends">Friends</string>
    <string name="title_all_users">Public</string>
    <string name="title_requests">Requests</string>
    <string name="upload_image">Upload Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <string name="action_settings">Settings</string>
    <string name="preview_description">Preview will appear here</string>
    <string name="btn_take_picture">Take Picture</string>
    <string name="btn_record_video">Record Video</string>
    <!-- Image Filters-->
    <string name="activity_title_main">Filters</string>
    <string name="filters">FILTERS</string>
    <string name="edit">EDIT</string>

    <string name="lbl_brightness">BRIGHTNESS</string>
    <string name="lbl_contrast">CONTRAST</string>
    <string name="lbl_saturation">SATURATION</string>
    <string name="tab_filters">FILTERS</string>
    <string name="tab_edit">EDIT</string>


    <string name="roboto_medium">sans-serif-medium</string>
    <string name="filter_normal">Normal</string>
    <string name="action_save">SAVE</string>
    <string name="action_open">OPEN</string>
    <string name="title_activity_image_filter">ImageFilterActivity</string>
    <string name="share">share</string>
    <string name="take_picture">Take Picture</string>
    <string name="search_name">Search User</string>
    <string name="accept">Accept</string>


</resources>
