<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainactivity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




            <RelativeLayout
                android:id="@+id/containerLayout"
                android:layout_margin="@dimen/container_layout_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/login_title"
                    android:textColor="@color/orange"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:text="@string/login_title"
                    style="@style/LabelStyle" />
                <EditText
                    android:id="@+id/et_email"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="60dp"
                    android:hint="@string/email_hint"
                    android:layout_below="@id/login_title"
                    style="@style/EditTextStyle"/>
                <EditText
                    android:id="@+id/et_password"
                    android:inputType="textPassword"
                    android:layout_marginTop="60dp"
                    android:hint="@string/password_hint"
                    android:layout_below="@id/et_email"
                    style="@style/EditTextStyle"/>
                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_below="@id/et_password"
                    android:textColor="@color/orange"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:layout_alignParentEnd="true"
                    android:textSize="16sp"
                    android:layout_marginTop="12dp"
                    android:text="@string/forgot_password"
                    style="@style/LabelStyle"
                    android:layout_alignParentRight="true" />

                <Button
                    android:id="@+id/login_auth_btn"
                    android:layout_marginTop="16dp"
                    android:layout_below="@id/forgot_password"
                    android:layout_width="match_parent"
                    android:textSize="18sp"
                    android:onClick="loginAuth"
                    android:elevation="5dp"
                    android:text="@string/login_button_label"
                    style="@style/SolidButtonStyle" />

                <Button
                    android:id="@+id/btn_signup"
                    style="@style/StrokeButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_below="@id/login_auth_btn"
                    android:onClick="singUp"
                    android:layout_marginTop="100dp"
                    android:text="@string/signup_button_label" />
            </RelativeLayout>

        </RelativeLayout>
